# MCP_Research_Assistant

./: README.md  mcp.ipynb  mcp_architecture_diagram.txt  mcp_chatbot.py  mcp_chatbot_L-5.py  mcp_chatbot_L-6.py  mcp_chatbot_L7.py  pyproject.toml  requirements.txt  research_server.py  server_config.json
papers/bio/: papers_info.json
papers/cosmos/: papers_info.json
papers/gen_ai/: papers_info.json
papers/pyvision/: papers_info.json
